--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server"
+    "start": "concurrently --kill-others \"webpack-dev-server\" \"node server.js\""
   },
   "author": "Mrithyunjay Gurav",
   "license": "ISC",
