--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "concurrently --kill-others \"webpack-dev-server\" \"node server.js\""
+    "start": "concurrently --kill-others \"parcel public/index.html \" \"node server.js\""
   },
   "author": "Mrithyunjay Gurav",
   "license": "ISC",
@@ -16,23 +16,15 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "node-fetch": "^2.6.0",
+    "parcel-bundler": "^1.12.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "request": "^2.88.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-loader": "^7.1.5",
+    "babel-core": "^6.26.3",
     "babel-plugin-transform-es2015-modules-amd": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^3.2.0",
-    "file-loader": "^4.2.0",
-    "path": "^0.12.7",
-    "style-loader": "^1.0.0",
-    "webpack": "^4.39.1",
-    "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.8.0",
-    "webpack-merge": "^4.2.2"
+    "babel-preset-react": "^6.24.1"
   }
 }
