--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "concurrently --kill-others \"parcel public/index.html \" \"node server.js\""
+    "start": "concurrently --kill-others \"parcel build public/index.html \" \"node server.js\""
   },
   "author": "Mrithyunjay Gurav",
   "license": "ISC",
